<resources>
    <string name="app_name">Amps</string>
    <string name="battery_health_cold">Cold</string>
    <string name="battery_health_dead">Dead</string>
    <string name="battery_health_good">Good</string>
    <string name="battery_health_over_voltage">Over voltage</string>
    <string name="battery_health_overheat">Overheat</string>
    <string name="battery_health_unspecified_failure">Unspecified failure</string>
    <string name="battery_status_charging">Charging</string>
    <string name="battery_status_discharging">Discharging</string>
    <string name="battery_status_full">Full</string>
    <string name="battery_plugged_none">On battery</string>
    <string name="battery_plugged_wireless">Wireless</string>
    <string name="battery_plugged_usb">USB</string>
    <string name="battery_plugged_ac">AC</string>
    <string name="blank_value">---</string>
    <string name="min_label">min:</string>
    <string name="plugged_in_label">Plugged</string>
    <string name="battery_level_label">Level</string>
    <string name="health_label">Health</string>
    <string name="technology_label">Technology</string>
    <string name="temperature_label">Temperature</string>
    <string name="voltage_label">Voltage</string>
    <string name="android_version_label">Android version</string>
    <string name="model_label">Model</string>
    <string name="build_id_label">Build ID</string>
    <string name="max_label">max:</string>
    <string name="charging_status_label">Status</string>
    <string name="accent_tag">accent</string>
    <string name="mA">%d mA</string>
    <string name="degrees_c">%.1f °C</string>
    <string name="degrees_f">%.1f °F</string>
    <string name="V">%.3f V</string>
    <string name="space">\ </string>
    <string name="reload">↺</string>
    <string name="use_celsius">Use Celsius</string>
    <string name="pref_units">Units</string>
    <string name="action_settings">Settings</string>
    <string name="action_debug">Debug</string>
    <string name="about">About Amps</string>
    <string name="license">License</string>
    <string name="unofficial_measurement">Amperage Measurement</string>
    <string name="value">Value %d</string>
    <string name="unofficial_setting_summary">Select method of getting the amperage</string>
    <string name="amp_info">\u24D8</string>
    <string name="xdefault">Default</string>
    <string name="battery_info_alert_message">There are multiple ways to determine battery current. See the amperage measurement setting for details.</string>
    <string name="go_to_battery_info_settings">Settings</string>
    <string name="send_error_report">Send Error Report</string>
    <string name="send_error_report_summary">Send an error report to help improve the app</string>
</resources>
